--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -2,12 +2,20 @@
   width: 100%
 }
 .card {
-  width: 13%;
+  width: 14%;
   height: 30%;
+  margin-right: 1%;
   float: right;
+  position: relative;
 }
-.card img {
+.card > img {
   width: 100%;
+}
+.card > .back {
+  position: absolute;
+}
+.grid-container {
+  width: 90%;
 }
 .mainTitle {
   width:
@@ -15,4 +23,5 @@
 .mainContainer {
   width: 100vw;
   height: 100vh;
+  background-image: url(../images/background_5.jpg);
 }
