--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,9 +1,9 @@
-.header {
-  width: 100%
+html,body {
+  margin: 0;
+  padding: 0;
 }
 .card {
   width: 14%;
-  height: 30%;
   margin-right: 1%;
   float: right;
   position: relative;
@@ -14,8 +14,22 @@
 .card > .back {
   position: absolute;
 }
-.grid-container {
+.gameContainer {
+  width: 100%;
+  height: 100%;
+}
+.gridContainer {
+  margin-top: 2%;
   width: 90%;
+}
+.headerContainer {
+  width: 100%;
+  height: 10%;
+  background-color: white;
+  box-shadow: 0 2px 0px 0 rgba(0,0,0,0.16)
+}
+.headerLogo {
+  height: 100%;
 }
 .mainTitle {
   width:
